objects/Apttus_Release_Approver__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Apttus Release Approvers</relationshipLabel>
        <relationshipName>Apttus_Release_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Apttus Release Approvers</relationshipLabel>
        <relationshipName>Apttus_Release_Approvers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apttus_Release_Approvers7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apttus_Release_Approvers8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apttus_Release_Approvers9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <label>Release Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apttus Release Approver</label>
    <nameField>
        <displayFormat>ARA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apttus Release Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>